# sentinelTrading42

./: .gitignore  DEPLOYMENT_STATUS.md  LICENSE  Makefile  PREFECT_GUIDE.md  QUICK_START.md  README.md  START_HERE.md  env.example  prefect.yaml  pyproject.toml  pytest.ini
flows/: flows.py
scripts/: check_production.sh  clean_crashed_flows.py  clean_duplicates.py  clean_logs.sh  finnhub_scraper.py  refresh_news.py  retrain_lstm.py  trading_pipeline.py  update_prices_simple.py  update_yfinance_data.py
src/: __init__.py  constants.py
src/core/: __init__.py  fusion.py  prediction.py  sentiment.py
src/data/: __init__.py  storage.py
src/gui/: README.md  __init__.py  launch.py  main.py
src/gui/assets/: custom.css
src/gui/config/: logging_config.py
src/gui/pages/: analysis_page.py  logs_page.py  production_page.py
src/gui/services/: chart_service.py  data_monitor_service.py  data_service.py  decision_validation_service.py  fusion_service.py  llm_service.py  monitoring_service.py  prediction_service.py  sentiment_service.py  service_manager.py
src/gui/tests/: test_production_robustness.py
src/gui/tests/unit/: test_data_service.py
src/notebooks/: 1_analysis_spy.ipynb  2_model_analysis.ipynb  3_results.ipynb  4_model_comparison.ipynb
src/tests/: __init__.py  conftest.py  run_tests.py  test_decisions_display.py  test_fusion.py  test_gui.py  test_integration.py  test_lstm.py  test_sentiment.py  test_storage.py  test_storage_incremental.py
src/tests/unit/: test_prediction_article.py
